--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -25,8 +25,8 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-      - name: Run formatter
-        run: npm run prettier
+      # - name: Run formatter
+      #   run: npm run prettier
 
       - name: Run tests
         run: CI=true npm run test
